@@ -1,3 +1,13 @@
+2007-02-17  Tor Lillqvist  <tml@novell.com>
+
+	* glib/gdate.c (win32_strftime_helper): New Win32-only
+	function. Use the wide character Win32 API to do the work of
+	strftime(): GetThreadLocale(), GetLocaleInfoW(), GetDateFormatW()
+	and GetTimeFormatW().
+	(g_date_strftime): On Windows use win32_strftime_helper()
+	instead of strftime() to avoid codepage issues with strftime().
+	Unfortunately using wcsftime() would not help either. (#404832)
+
 2007-02-16  Soren Sandmann <sandmann@redhat.com>
 
 	* tests/sequence-test.c: For move, test moving between two
